# gcp-resource-analysis

./: .bumpversion.cfg  .env.template  .gitignore  publish.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
gcp_resource_analysis/: __init__.py  client.py  gcp_iam_analysis.py
gcp_resource_analysis/models/: __init__.py  iam_analysis.py  storage_analysis.py
promptql_connector_example/: compose.yaml.template  functions.py  requirements.txt
tests/: tests_client.py
